Build with JDK 1.8 instead of 11